--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -6,8 +6,8 @@
 
     <main class="flex flex-col flex-grow self-center mt-12 mb-16 px-6 w-full max-w-5xl">
         <!-- back button -->
-        <div class="mb-2 text-sm font-medium text-gray-600 hover:cursor-pointer hover:text-gray-800 transition-colors">
-            <button onclick="handleBack()" class="inline-flex items-center gap-2">
+        <div class="mb-2 text-sm font-medium text-gray-600 hover:text-gray-800 transition-colors">
+            <button onclick="handleBack()" class="inline-flex items-center gap-2 cursor-pointer">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                      class="lucide lucide-move-left-icon lucide-move-left">
