--- a/templates/login_sql_injection.html
+++ b/templates/login_sql_injection.html
@@ -40,7 +40,7 @@
 
             <!-- login form -->
             <form
-                    hx-post="{{ url_for('login') }}"
+                    hx-post="{{ url_for('login_sql_injection') }}"
                     hx-target="#error-messages"
                     hx-swap="innerHTML"
                     hx-disabled-elt="#login-button"
@@ -49,7 +49,7 @@
             >
                 <label for="email" class="font-semibold text-lg"> Email </label>
                 <input
-                        type="email"
+                        type="text"
                         id="email"
                         name="email"
                         placeholder="Enter your Email"
