--- a/templates/organization/organization_manage.html
+++ b/templates/organization/organization_manage.html
@@ -50,8 +50,8 @@
         </div>
 
         <!-- back button -->
-        <div class="mb-2 text-sm font-medium text-gray-600 hover:cursor-pointer hover:text-gray-800 transition-colors">
-            <button onclick="handleBack()" class="inline-flex items-center gap-2">
+        <div class="mb-2 text-sm font-medium text-gray-600 hover:text-gray-800 transition-colors">
+            <a href="{{ url_for("profile", tab="orgs") }}" class="inline-flex items-center gap-2">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                      class="lucide lucide-move-left-icon lucide-move-left">
@@ -60,7 +60,7 @@
                 </svg>
 
                 <span>Back</span>
-            </button>
+            </a>
         </div>
 
         {% if org_details %}
